--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -13,7 +13,7 @@ body{
     background-color: #ebebeb;
   }
   .my-books{
-    margin-top: 5%;
+    margin-top: 2%;
     margin-left:  5%;
     margin-right: 5%;
   }
@@ -84,9 +84,25 @@ ball {
     //border-bottom: 2px solid #757575;
     flex: auto;
     display: flex;
+    margin-bottom: 10px;
   }
   
-  
+
+  .subheader
+  {
+    position: relative;
+    background-color: #2f3842; 
+    color: #FAFAFA;
+    width: 60%;
+    left: 20%;
+    //border-top: 2px solid #FAFAFA;
+    border-radius: 40px 40px 0px 0px;
+    //border-top: 2px solid #757575;
+    //border-bottom: 2px solid #757575;
+    flex: auto;
+    display: flex;
+  }
+
   label.header-cat {
     flex-grow: 2;
     position: relative;
