--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -89,6 +89,7 @@ ball {
   border-radius: 0px 0px 40px 40px;
   flex: auto;
   display: flex;
+  margin-bottom: 10px;
 }
 
 .subheader
@@ -125,6 +126,19 @@ section {
   display: flex;
   align-items: center;
   justify-content: stretch;
+}
+
+.add-icon{
+  height: 40px;
+  width: 40px;
+  flex-grow: 2;
+  position: fixed;
+  right: 2%;
+  bottom: 2%;
+  z-index: 5;
+  border-radius: 50%;
+  filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
+  background-color: #00b1b8;
 }
 
   .book-bottom{
