--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -166,6 +166,7 @@ section {
     border-radius:30px 30px 0px 0px ;
     font-size: 32px;
     width: 100%;
+    z-index: 6;
   }
   .bookNavbarList{
     margin-top: 5px;
