--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -153,7 +153,6 @@ section {
     border-radius:30px 30px 0px 0px ;
     font-size: 32px;
     width: 100%;
-
   }
   .bookNavbarList{
     margin-top: 5px;
@@ -164,7 +163,7 @@ section {
   .cover.regular{
     opacity: 1;
   }
-  button{
+  .a-button{
     border:0;
     background-color: #2f3842;
   }
@@ -182,4 +181,12 @@ section {
 icon-bigger{
     height: 30px !important;
     width: 30px !important;
+  }
+
+  .no-req-msg{
+    max-width: 70%;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
